--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     </head>
     <style>
         body{
-            background-color: #e0f2ff;
+            background: linear-gradient(135deg, #ff9a9e, #fad0c4, #a1c4fd);
             align-items: center;
             display: flex;
             justify-content: center;
@@ -55,4 +55,5 @@
 
         </div>
     </body>
+
 </html>
