--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
             display: flex;
             justify-content: center;
             height: 100vh;
+
         }
         .box{
             width: 320px;
@@ -19,6 +20,7 @@
             box-shadow: 0 0 10px rgba(0,0,0,0.15);
             text-align: center;
             border: 2px solid black;
+
         }
         label{
             display: block;
@@ -39,18 +41,27 @@
     <body>
         <div class = "box">
             <h2>Login</h2>
-            <form>
+            <form action = "/login" method = "POST">
                 <label for ="username">Username:</label>
                 <input type = "text" id = "username" name = "username" placeholder="Enter Your Username" required>
                 <br>
                 <br>
                 <label for ="password">Password:</label>
-                <input type = "text" id = "password" name = "password" placeholder="Enter Your Password" required>
+                <input type = "password" id = "password" name = "password" placeholder="Enter Your Password" required>
                 <br>
                 <br>
                 <button type = "submit">Sign In</button>
             </form>
-
+            <h2>Create Account</h2>
+            <form action="/register" method="POST">
+                <label for="reg-username">Username:</label>
+                <input type="text" id="reg-username" name="username" placeholder="Enter Your Username" required>
+                <br><br>
+                <label for="reg-password">Password:</label>
+                <input type="password" id="reg-password" name="password" placeholder="Enter Your Password" required>
+                 <br><br>
+                <button type="submit">Sign Up</button>
+            </form>
         </div>
     </body>
 </html>
