--- a/home.html
+++ b/home.html
@@ -1,3 +1,8 @@
+<!-- This is where the user is taken after a login and register. I Will change the register part to just show a brief 
+message that it worked, and to now login. This will prevent it from going to another page.
+
+We can manipulate this page to be the first page of whatever we are going to see when we login if we want-->
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -9,3 +14,4 @@
   <a href="/logout">Logout</a>
 </body>
 </html>
+
